recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: not found: value levels
	if(levels==0){
           ^